ossm/vendor/envoy_toolshed/format/clang_tidy/parser/tests/simple_error.txt
file.cpp:1:1: error: expected ';' after expression [clang-diagnostic-error]
  return 0
  ^
